# mlops-accidents

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  MLproject  Makefile  README.md  docker-compose.yml  dvc.yaml  main.py  prometheus.yml  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: python-app.yml
api/: base.py  main.py  main_api.py  metric_api.py  predict.py  prediction_api.py  test_api.py
config/: prometheus.yml
config/grafana/dashboards/: accidents-dashboard.json
config/grafana/provisioning/datasources/: prometheus.yml
data/: preprocessed.dvc
data/preprocessed/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
data/processed/: accidents_2024_processed.csv
data/raw/: caracteristiques_2024.csv  lieux_2024.csv  vehicules_2024.csv
docs/: api.md  data_pipeline.md  makefiledoc.md  model.md
grafana/provisioning/dashboards/: accidents_dashboard.json  dashboard.yml
metrics/: .gitignore  evaluation_metrics.json
models/: model.pkl  model_columns.pkl
nginx/: Dockerfile  nginx.conf
nginx/certs/: nginx.crt  nginx.key
src/: collect.py  process.py  train.py
src/api/: main.py  metrics.py  schemas.py
src/api/routers/: inference.py  monitoring.py
src/config/: config.py
src/data/: make_dataset.py
src/models/: evaluate_model.py  train_model.py  trained_model.joblib.dvc
tests/: test_api.py  test_data.py
